version/0.18/_sources/api/solver/_autosummary/settings/options_10.rst.txt
:orphan:

.. _options_10:

options
=======

.. autoclass:: ansys.fluent.core.solver.settings_232.options_10.options
    :show-inheritance:

.. rubric:: Attributes

==================================   ========================

Attribute                                             Summary

==================================   ========================
:ref:`node_values <node_values_1>`       'node_values' child.

==================================   ========================

.. rubric:: Included in:

==================================================   ==========================================

Parent                                                                                  Summary

==================================================   ==========================================
:ref:`particle_track_child <particle_track_child>`       'child_object_type' of particle_track.

==================================================   ==========================================

