version/0.20/_sources/api/solver/_autosummary/settings/options_10.rst.txt
:orphan:

.. _options_10:

options
=======

.. autoclass:: ansys.fluent.core.solver.settings_241.options_10.options
    :show-inheritance:

.. rubric:: Attributes

==============================   =======================

Attribute                                        Summary

==============================   =======================
:ref:`nodes <nodes>`                      'nodes' child.

:ref:`edges <edges_1>`                    'edges' child.

:ref:`faces <faces_1>`                    'faces' child.

:ref:`partitions <partitions>`       'partitions' child.

:ref:`overset <overset_2>`              'overset' child.

:ref:`gap <gap>`                            'gap' child.

==============================   =======================

.. rubric:: Included in:

================================   ================================

Parent                                                      Summary

================================   ================================
:ref:`mesh_child <mesh_child_1>`       'child_object_type' of mesh.

================================   ================================

